# sinamecc-backend

./: .env  .gitignore  Dockerfile  Dockerfile.dev  GIT_GUIDELINE.md  README.md  createsuperuser.sh  dev.env  docker-compose.yml  get_token  loaddata.py  makefile  manage.py  purge.py  purge_app.py  pyproject.toml  requirements.txt  run-tests.sh  runme.sh  test-running-backend.sh
.github/: pull_request_template.md
.github/workflows/: deploy_on_ecs.yaml  (+2 more)
adaptation_action/: apps.py  email_services.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
config/: settings.py  urls.py  wsgi.py
core/: constants.py  exceptions.py
fixtures/: db.json
general/: apps.py  custom_decorators.py  helpers.py  models.py  permissions.py  serializers.py  services.py  storages.py  tests.py  urls.py  utils.py  views.py
mccr/: apps.py  email_services.py  models.py  serializers.py  services.py  urls.py  views.py
mitigation_action/: _services.py  _views.py  apps.py  constants.py  email_services.py  exceptions.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
pipeline/: Jenkinsfile.groovy  JenkinsfileDev.groovy  JenkinsfileStage.groovy
ppcn/: apps.py  email_services.py  models.py  serializers.py  services.py  test_ppcn.json  urls.py  views.py
report_data/: apps.py  email_services.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
sql/: sinamecc_db.sql
user_self_management/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
users/: admin.py  constants.py  email_services.py  exceptions.py  models.py  roles.py  serializers.py  services.py  urls.py  utils.py  views.py
workflow/: models.py  serializers.py  services.py  urls.py  views.py
(+433 files in other folders)
